--- a/app/templates/accounts/list.html
+++ b/app/templates/accounts/list.html
@@ -11,7 +11,7 @@
                 <i class="fas fa-chart-line me-2"></i>同步报告
             </a>
             <button type="button" class="btn btn-success" onclick="syncAllInstances()">
-                <i class="fas fa-sync me-2"></i>同步所有实例
+                <i class="fas fa-sync me-2"></i>同步所有账户
             </button>
         </div>
     </div>
